--- a/GAS/View/Activity.html
+++ b/GAS/View/Activity.html
@@ -30,7 +30,7 @@
                     </button>
                     <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="split-button">
                         <li role="menuitem"><a ng-click="ShowNewActivityForm()">New Activity</a></li>
-                        <li role="menuitem"><a ng-click="ShowQuickExpenseForm()">Quick</a></li>
+                        <li role="menuitem"><a ng-click="ShowQuickExpenseForm()">Quick Expense</a></li>
                     </ul>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                                         <i class="fa fa-plus-square fa-3x" title="New Activity" ng-click="ShowNewActivityForm()" style="height:30px;border-radius:50%;
                                              position: absolute;top:5px; right: 70px;" ></i>
 
-                                        <i class="fa fa-check-square fa-3x" title="Quick Activity" ng-click="ShowQuickExpenseForm()" style="width:30px;height:30px;border-radius:50%;
+                                        <i class="fa fa-dollar fa-3x" title="Quick Expense" ng-click="ShowQuickExpenseForm()" style="width:30px;height:30px;border-radius:50%;
                                             position: absolute;top:5px; right: 20px;" > </i>
 
 
