--- a/GAS/View/ProjectDetail.html
+++ b/GAS/View/ProjectDetail.html
@@ -9,7 +9,7 @@
         <div class="row project_text bg_e7">
             <div class="col-xs-6"><label class="text_discuss">Project Name  :</label> {{Project.ProjectName}} </div><div class="col-xs-6"><label class="text_discuss"> Project Number:</label> {{Project.ProjectNumber}}</div>
             <div class="col-xs-6"><label class="text_discuss"> Client Name :</label> {{Project.ClientName}} </div><div class="col-xs-6"><label class="text_discuss"> Project Value:</label> {{Project.ProjectValue | currency : "&#8377" : 2 }}</div>
-            <div class="col-xs-6"><label class="text_discuss">  Project Status :</label> {{Project.ProjectStatus}} </div><div class="col-xs-6"><label class="text_discuss"> Project Description:</label> {{Project.ProjectDescription}}</div>
+            <div class="col-xs-6"><label class="text_discuss">  Project Status :</label> {{Project.Status}} </div><div class="col-xs-6"><label class="text_discuss"> Project Description:</label> {{Project.ProjectDescription}}</div>
             <div class="col-xs-6"><label class="text_discuss"> Creation Date :</label> {{Project.ProjectCreationDate| date:"mediumDate"}} </div><div class="col-xs-6"><label class="text_discuss"> Last Updated:</label> {{Project.StatusOn| date:"mediumDate"}}</div>
         </div>
 
@@ -61,7 +61,7 @@
                     <div class="row">
                    
                         <div class="col-xs-12 " style="margin:10px;">
-                            <div class="data_header" style="text-align:center;">  Sell <span class="fa fa-plus" title="Create Invoice" ng-click="model.newInvoiceDiv= true" style="margin-left:20px;"></span></div>
+                            <div class="data_header" style="text-align:center;">  Sale <span class="fa fa-plus" title="Create Invoice" ng-click="model.newInvoiceDiv= true" style="margin-left:20px;"></span></div>
                             <div class="customLayout" style="max-height:300px;overflow:scroll;">
                                 <table  ng-init="sellItems = {}" style="max-height:250px; overflow:scroll; width:100%;">
                                     <tr>
@@ -193,7 +193,7 @@
                                     <th>Advance</th>
                                 </tr>
 
-                                <tr ng-repeat="act in ActivityList">
+                                <tr ng-repeat="act in model.ActivityList">
                                     <td>{{ $index + 1 }}</td>
                                     <td>{{ act.ActivityName}}</td>
                                     <td>{{ act.Employee}}</td>
@@ -303,7 +303,8 @@
                                 <div class="row">
                                     <label for="colFormLabel" class="col-sm-5 col-form-label">Project/Head:</label>
                                     <div class="col-sm-7">
-                                        <select  class="form-control" ng-model="activity_Project" ng-options="x.ProjectName for x in ProjectList"></select>
+                                        {{Project.ProjectName}}
+                                        <!--<select class="form-control" ng-model="activity_Project" ng-options="x.ProjectName for x in ProjectList"></select>-->
 
                                     </div>
                                 </div>
@@ -335,7 +336,7 @@
                                     <label for="colFormLabel" class="col-sm-5 col-form-label">Amount:</label>
                                     <div class="col-sm-7">
 
-                                        <input type="date" class="form-control" name="itemDate" tabindex="5" placeholder="Amount" ng-model="expense_amount" required min-amount />
+                                        <input  class="form-control" name="itemDate" tabindex="5" placeholder="Amount" ng-model="expense_amount" required min-amount />
                                     </div>
                                 </div>
                             </div>
@@ -347,7 +348,7 @@
 
                                     <label for="colFormLabel" class="col-sm-5 col-form-label">Remark</label>
                                     <div class="col-sm-7">
-                                        <input type="number" class="form-control" name="Remark" tabindex="5" ng-model="expense_remarks" required text-length>
+                                        <input class="form-control" name="Remark" tabindex="5" ng-model="expense_remarks" required text-length>
                                     </div>
                                 </div>
                             </div>
@@ -524,7 +525,7 @@
 
                                     <label for="colFormLabel" class="col-sm-4 col-form-label">Description</label>
                                     <div class="col-sm-8">
-                                        <input type="number" class="form-control" tabindex="9" ng-model="project_description">
+                                        <input type="text" class="form-control" tabindex="9" ng-model="project_description">
                                     </div>
                                 </div>
                             </div>
@@ -723,7 +724,7 @@
 
                                     <label for="colFormLabel" class="col-sm-4 col-form-label">Description</label>
                                     <div class="col-sm-8">
-                                        <input type="number" class="form-control" tabindex="9" ng-model="project_description">
+                                        <input type="text" class="form-control" tabindex="9" ng-model="project_description">
                                     </div>
                                 </div>
                             </div>
