--- a/GAS/View/Project.html
+++ b/GAS/View/Project.html
@@ -106,8 +106,8 @@
                                     <td>{{ $index + 1 }}</td>
                                     <td>{{ exp.ExpenseDate| date:"ddMMM,yy"}}</td>
                                     <td>{{ exp.Status }}</td>
-                                    <td>{{ exp.ExpenseAmount}}</td>
-                                    <td>{{ exp.ReceiveAmount}}</td>
+                                    <td>{{ exp.ExpenseAmount | currency : "&#8377" : 2}}</td>
+                                    <td>{{ exp.ReceiveAmount | currency : "&#8377" : 2}}</td>
 
                                 </tr>
 
