--- a/GAS/View/Transaction.html
+++ b/GAS/View/Transaction.html
@@ -252,7 +252,8 @@
                     </form>
                 </div>
                 <div class="layout_modal_footer">
-                    <button type="button" class="btn btn-success" ng-click="PaySalary()" ng-disabled="salary.AccHolder.$invalid || salary.Amount.$invalid || salary.Remark.$invalid">Add</button>
+                    <button type="button" class="btn btn-success" ng-click="PaySalary()" 
+                            ng-disabled="salary.AccHolder.$invalid || salary.Amount.$invalid || salary.Remark.$invalid">Add</button>
                     &nbsp;&nbsp;
                     <button type="button" class="btn btn-warning" ng-click="newSalary=false">Close</button>
                 </div>
